<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="325dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <TableRow>
        <ImageButton
            android:id="@+id/btnHotels"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="10dp"
            android:background="#254441"
            android:src="@drawable/hotels"
            android:contentDescription="@string/contentDescHotels"
            android:layout_weight="1"
            android:onClick="onClick" />
        <ImageButton
            android:id="@+id/btnMovies"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="10dp"
            android:background="#254441"
            android:src="@drawable/movies"
            android:contentDescription="@string/contentDescMovies"
            android:layout_weight="1"
            android:onClick="onClick"/>
    </TableRow>
    <TableRow>
        <ImageButton
            android:id="@+id/btnRestaurants"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="10dp"
            android:background="#254441"
            android:src="@drawable/restaurants"
            android:contentDescription="@string/contentDescRestaurants"
            android:layout_weight="1"
            android:onClick="onClick"/>
        <ImageButton
            android:id="@+id/btnTransport"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="10dp"
            android:background="#254441"
            android:src="@drawable/transport"
            android:contentDescription="@string/contentDescTransport"
            android:layout_weight="1"
            android:onClick="onClick"/>
    </TableRow>
    <TableRow>
        <ImageButton
            android:id="@+id/btnBusiness"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="10dp"
            android:background="#254441"
            android:src="@drawable/business"
            android:contentDescription="@string/contentDescBusiness"
            android:layout_weight="1"
            android:onClick="onClick"/>
        <ImageButton
            android:id="@+id/btnEvents"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="10dp"
            android:background="#254441"
            android:src="@drawable/events"
            android:contentDescription="@string/contentDescEvents"
            android:layout_weight="1"
            android:onClick="onClick"/>
    </TableRow>


</TableLayout>